{
  "version": 4,
  "terraform_version": "0.12.24",
  "serial": 163,
  "lineage": "b791d87f-9256-4362-ce21-23da2c6a010c",
  "resources": [
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_eip",
      "name": "archTestNATIPEastA",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "domain": "vpc",
            "id": "eipalloc-030e3c8df4633ffe8",
            "public_dns": "ec2-3-233-51-167.compute-1.amazonaws.com",
            "public_ip": "3.233.51.167",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "Arch Test - Elastic IP Subnet A"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_eip",
      "name": "archTestNATIPEastB",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "domain": "vpc",
            "id": "eipalloc-06351db8856915bf1",
            "public_dns": "ec2-54-204-107-39.compute-1.amazonaws.com",
            "public_ip": "54.204.107.39",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "Arch Test - Elastic IP Subnet B"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "archTestInternetGateway",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "igw-0c7fd333304a57e4e",
            "owner_id": "428188582803",
            "tags": {
              "Name": "ArchTestInternetGateway"
            },
            "vpc_id": "vpc-005627076f43c4af4"
          },
          "dependencies": [
            "module.network.aws_vpc.archTestVPC"
          ]
        }
      ]
    },
    {
      "module": "module.autoscaling",
      "mode": "managed",
      "type": "aws_lb",
      "name": "archTestLB",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:428188582803:loadbalancer/app/ArchTestLB/efcf97f9c36c45df",
            "arn_suffix": "app/ArchTestLB/efcf97f9c36c45df",
            "dns_name": "ArchTestLB-110591832.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "id": "arn:aws:elasticloadbalancing:us-east-1:428188582803:loadbalancer/app/ArchTestLB/efcf97f9c36c45df",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "ArchTestLB",
            "security_groups": [
              "sg-08e3ed3bf82337ae1"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-01e8f2847103b5d97"
              },
              {
                "subnet_id": "subnet-085863a159c40600f"
              }
            ],
            "subnets": [
              "subnet-01e8f2847103b5d97",
              "subnet-085863a159c40600f"
            ],
            "vpc_id": "vpc-005627076f43c4af4",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "module.network.aws_security_group.arch_test_external_app",
            "module.network.aws_subnet.publicSubNetEastA",
            "module.network.aws_subnet.publicSubNetEastB",
            "module.network.aws_vpc.archTestVPC"
          ]
        }
      ]
    },
    {
      "module": "module.autoscaling",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "archTestLBListener",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:428188582803:listener/app/ArchTestLB/efcf97f9c36c45df/42a1153b56165848",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:428188582803:targetgroup/ArchTestLB-TG/6af399d1a5291ed2",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:428188582803:listener/app/ArchTestLB/efcf97f9c36c45df/42a1153b56165848",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:428188582803:loadbalancer/app/ArchTestLB/efcf97f9c36c45df",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "timeouts": null
          },
          "dependencies": [
            "module.autoscaling.aws_lb.archTestLB",
            "module.autoscaling.aws_lb_target_group.archTestLBTargetGroup",
            "module.network.aws_security_group.arch_test_external_app",
            "module.network.aws_subnet.publicSubNetEastA",
            "module.network.aws_subnet.publicSubNetEastB",
            "module.network.aws_vpc.archTestVPC"
          ]
        }
      ]
    },
    {
      "module": "module.autoscaling",
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "archTestListenerRuleStatic",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:428188582803:targetgroup/ArchTestLB-TG/6af399d1a5291ed2",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:428188582803:listener-rule/app/ArchTestLB/efcf97f9c36c45df/42a1153b56165848/667c88dbca5b2815",
            "condition": [
              {
                "field": "path-pattern",
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "values": [
                      "*"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": [],
                "values": [
                  "*"
                ]
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:428188582803:listener-rule/app/ArchTestLB/efcf97f9c36c45df/42a1153b56165848/667c88dbca5b2815",
            "listener_arn": "arn:aws:elasticloadbalancing:us-east-1:428188582803:listener/app/ArchTestLB/efcf97f9c36c45df/42a1153b56165848",
            "priority": 100
          },
          "dependencies": [
            "module.autoscaling.aws_lb.archTestLB",
            "module.autoscaling.aws_lb_listener.archTestLBListener",
            "module.autoscaling.aws_lb_target_group.archTestLBTargetGroup",
            "module.network.aws_security_group.arch_test_external_app",
            "module.network.aws_subnet.publicSubNetEastA",
            "module.network.aws_subnet.publicSubNetEastB",
            "module.network.aws_vpc.archTestVPC"
          ]
        }
      ]
    },
    {
      "module": "module.autoscaling",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "archTestLBTargetGroup",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:428188582803:targetgroup/ArchTestLB-TG/6af399d1a5291ed2",
            "arn_suffix": "targetgroup/ArchTestLB-TG/6af399d1a5291ed2",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/healthCheck",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:428188582803:targetgroup/ArchTestLB-TG/6af399d1a5291ed2",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "ArchTestLB-TG",
            "port": 8080,
            "protocol": "HTTP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-005627076f43c4af4"
          },
          "dependencies": [
            "module.network.aws_vpc.archTestVPC"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_main_route_table_association",
      "name": "archTestMainRouteTable",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e106740b87cb5e81",
            "original_route_table_id": "rtb-0f48cdc1d15c6e145",
            "route_table_id": "rtb-07ec496ca57f13c78",
            "vpc_id": "vpc-005627076f43c4af4"
          },
          "dependencies": [
            "module.network.aws_eip.archTestNATIPEastA",
            "module.network.aws_nat_gateway.archTestNATEastA",
            "module.network.aws_route_table.archTestRouteAppA",
            "module.network.aws_route_table_association.archTestAssocAppA",
            "module.network.aws_subnet.appSubNetEastA",
            "module.network.aws_subnet.publicSubNetEastA",
            "module.network.aws_vpc.archTestVPC"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "archTestNATEastA",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-030e3c8df4633ffe8",
            "id": "nat-026ff4dae59c0748f",
            "network_interface_id": "eni-05a00f077f1c34d26",
            "private_ip": "10.0.0.251",
            "public_ip": "3.233.51.167",
            "subnet_id": "subnet-01e8f2847103b5d97",
            "tags": {
              "Name": "NAT Gateway East A"
            }
          },
          "dependencies": [
            "module.network.aws_eip.archTestNATIPEastA",
            "module.network.aws_subnet.publicSubNetEastA",
            "module.network.aws_vpc.archTestVPC"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "archTestNATEastB",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-06351db8856915bf1",
            "id": "nat-0e4348615e5359eca",
            "network_interface_id": "eni-0eadc62f5767331ba",
            "private_ip": "10.0.2.148",
            "public_ip": "54.204.107.39",
            "subnet_id": "subnet-085863a159c40600f",
            "tags": {
              "Name": "NAT Gateway East B"
            }
          },
          "dependencies": [
            "module.network.aws_eip.archTestNATIPEastB",
            "module.network.aws_subnet.publicSubNetEastB",
            "module.network.aws_vpc.archTestVPC"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "archTestRouteAppA",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-07ec496ca57f13c78",
            "owner_id": "428188582803",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-026ff4dae59c0748f",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "A App Route Gateway"
            },
            "vpc_id": "vpc-005627076f43c4af4"
          },
          "dependencies": [
            "module.network.aws_eip.archTestNATIPEastA",
            "module.network.aws_nat_gateway.archTestNATEastA",
            "module.network.aws_subnet.publicSubNetEastA",
            "module.network.aws_vpc.archTestVPC"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "archTestRouteAppB",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-03a1bef7ab5bdaf66",
            "owner_id": "428188582803",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-0e4348615e5359eca",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "B App Route Gateway"
            },
            "vpc_id": "vpc-005627076f43c4af4"
          },
          "dependencies": [
            "module.network.aws_eip.archTestNATIPEastB",
            "module.network.aws_nat_gateway.archTestNATEastB",
            "module.network.aws_subnet.publicSubNetEastB",
            "module.network.aws_vpc.archTestVPC"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "archTestRoutePublicA",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0b06b73a3ef6c8635",
            "owner_id": "428188582803",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0c7fd333304a57e4e",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Public Route Gateway"
            },
            "vpc_id": "vpc-005627076f43c4af4"
          },
          "dependencies": [
            "module.network.aws_internet_gateway.archTestInternetGateway",
            "module.network.aws_vpc.archTestVPC"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "archTestAssocAppA",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d270df84b370316e",
            "route_table_id": "rtb-07ec496ca57f13c78",
            "subnet_id": "subnet-00b05f83a35e3742f"
          },
          "dependencies": [
            "module.network.aws_eip.archTestNATIPEastA",
            "module.network.aws_nat_gateway.archTestNATEastA",
            "module.network.aws_route_table.archTestRouteAppA",
            "module.network.aws_subnet.appSubNetEastA",
            "module.network.aws_subnet.publicSubNetEastA",
            "module.network.aws_vpc.archTestVPC"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "archTestAssocAppB",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03628acc48237bb7b",
            "route_table_id": "rtb-03a1bef7ab5bdaf66",
            "subnet_id": "subnet-0f9a52754df8838bb"
          },
          "dependencies": [
            "module.network.aws_eip.archTestNATIPEastB",
            "module.network.aws_nat_gateway.archTestNATEastB",
            "module.network.aws_route_table.archTestRouteAppB",
            "module.network.aws_subnet.appSubNetEastB",
            "module.network.aws_subnet.publicSubNetEastB",
            "module.network.aws_vpc.archTestVPC"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "archTestAssocPublicA",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09456dbeade88f7cc",
            "route_table_id": "rtb-0b06b73a3ef6c8635",
            "subnet_id": "subnet-01e8f2847103b5d97"
          },
          "dependencies": [
            "module.network.aws_internet_gateway.archTestInternetGateway",
            "module.network.aws_route_table.archTestRoutePublicA",
            "module.network.aws_subnet.publicSubNetEastA",
            "module.network.aws_subnet.publicSubNetEastB",
            "module.network.aws_vpc.archTestVPC"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09cc416893eedae0b",
            "route_table_id": "rtb-0b06b73a3ef6c8635",
            "subnet_id": "subnet-085863a159c40600f"
          },
          "dependencies": [
            "module.network.aws_internet_gateway.archTestInternetGateway",
            "module.network.aws_route_table.archTestRoutePublicA",
            "module.network.aws_subnet.publicSubNetEastA",
            "module.network.aws_subnet.publicSubNetEastB",
            "module.network.aws_vpc.archTestVPC"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "arch_test_allow_app",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:428188582803:security-group/sg-0cf4d694df0a4ec92",
            "description": "Allow App 8080 inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0cf4d694df0a4ec92",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "80 from VPC",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-08e3ed3bf82337ae1"
                ],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [],
                "description": "8080 from VPC",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-08e3ed3bf82337ae1"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "Arch Test allow App",
            "name_prefix": null,
            "owner_id": "428188582803",
            "revoke_rules_on_delete": false,
            "tags": null,
            "timeouts": null,
            "vpc_id": "vpc-005627076f43c4af4"
          },
          "dependencies": [
            "module.network.aws_security_group.arch_test_external_app",
            "module.network.aws_vpc.archTestVPC"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "arch_test_allow_ssh",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:428188582803:security-group/sg-0969155a6630a5098",
            "description": "Allow SSH inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0969155a6630a5098",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH from Anywhere",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "Arch Test Allow SSH",
            "name_prefix": null,
            "owner_id": "428188582803",
            "revoke_rules_on_delete": false,
            "tags": null,
            "timeouts": null,
            "vpc_id": "vpc-005627076f43c4af4"
          },
          "dependencies": [
            "module.network.aws_vpc.archTestVPC"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "arch_test_external_app",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:428188582803:security-group/sg-08e3ed3bf82337ae1",
            "description": "Allow App 8080 inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-08e3ed3bf82337ae1",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Inbound external",
                "from_port": 80,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "Arch Test Allow External App",
            "name_prefix": null,
            "owner_id": "428188582803",
            "revoke_rules_on_delete": false,
            "tags": null,
            "timeouts": null,
            "vpc_id": "vpc-005627076f43c4af4"
          },
          "dependencies": [
            "module.network.aws_vpc.archTestVPC"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "appSubNetEastA",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:428188582803:subnet/subnet-00b05f83a35e3742f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-00b05f83a35e3742f",
            "map_public_ip_on_launch": false,
            "owner_id": "428188582803",
            "tags": {
              "Name": "Arch Test - App Subnet A"
            },
            "vpc_id": "vpc-005627076f43c4af4"
          },
          "dependencies": [
            "module.network.aws_vpc.archTestVPC"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "appSubNetEastB",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:428188582803:subnet/subnet-0f9a52754df8838bb",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.3.0/24",
            "id": "subnet-0f9a52754df8838bb",
            "map_public_ip_on_launch": false,
            "owner_id": "428188582803",
            "tags": {
              "Name": "Arch Test - App Subnet B"
            },
            "vpc_id": "vpc-005627076f43c4af4"
          },
          "dependencies": [
            "module.network.aws_vpc.archTestVPC"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "publicSubNetEastA",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:428188582803:subnet/subnet-01e8f2847103b5d97",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.0.0/24",
            "id": "subnet-01e8f2847103b5d97",
            "map_public_ip_on_launch": false,
            "owner_id": "428188582803",
            "tags": {
              "Name": "Arch Test - Public Subnet A"
            },
            "vpc_id": "vpc-005627076f43c4af4"
          },
          "dependencies": [
            "module.network.aws_vpc.archTestVPC"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "publicSubNetEastB",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:428188582803:subnet/subnet-085863a159c40600f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-085863a159c40600f",
            "map_public_ip_on_launch": false,
            "owner_id": "428188582803",
            "tags": {
              "Name": "Arch Test - Public Subnet B"
            },
            "vpc_id": "vpc-005627076f43c4af4"
          },
          "dependencies": [
            "module.network.aws_vpc.archTestVPC"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "archTestVPC",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:428188582803:vpc/vpc-005627076f43c4af4",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-01b04f3e8d513b11d",
            "default_route_table_id": "rtb-0f48cdc1d15c6e145",
            "default_security_group_id": "sg-04d013c8938bfed31",
            "dhcp_options_id": "dopt-336baa56",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-005627076f43c4af4",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0f48cdc1d15c6e145",
            "owner_id": "428188582803",
            "tags": {
              "Name": "ArchTestVPC"
            }
          }
        }
      ]
    }
  ]
}